Grayscale handouts are produced

--- a/ichps2020-kolenikov-svy.tex
+++ b/ichps2020-kolenikov-svy.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[handout]{beamer}
 
 \usetheme{boadilla}
 \usecolortheme{bullfinchbw}
@@ -7,6 +7,9 @@
 \beamertemplatenavigationsymbolsempty
 
 \usepackage{amsmath,amsfonts,natbib,comment,graphicx}
+
+\usepackage{pgfpages}
+\pgfpagesuselayout{2 on 1}[letterpaper,border shrink=5mm]
 
 \newcommand{\Expect}{\mathbb{E}}
 \newcommand{\Var}{\mathbb{V}}
