Abt -> NORC replacements
including colors and logo

--- a/ichps2020-kolenikov-svy.tex
+++ b/ichps2020-kolenikov-svy.tex
@@ -4,11 +4,12 @@
 \usetheme{boadilla}
 % \usecolortheme{bullfinchbw}
 % \usecolortheme{bullfinch}
-\usecolortheme{bullfinchdark}
+% \usecolortheme{bullfinchdark}
+\usecolortheme{norcdark}
 
 \beamertemplatenavigationsymbolsempty
 
-\usepackage{amsmath,amsfonts,natbib,comment,graphicx}
+\usepackage{amsmath,amsfonts,natbib,comment,graphicx,roboto}
 
 \usepackage{pgfpages}
 % \pgfpagesuselayout{2 on 1}[letterpaper,border shrink=5mm]
@@ -26,11 +27,11 @@
  % \medskip \\ Conference WiFi: Marriott{\_}CONFERENCE; CHSBQT
  \medskip \\ GitHub: https://github.com/skolenik/ICHPS2020-svy }
 
-\institute[Abt Associates]{Abt Associates \\ \medskip Views and opinions are those of the instructor only, \\ not those of Abt Associates or ASA}
+\institute[NORC]{NORC \\ \medskip Views and opinions are those of the instructor only, \\ not those of NORC or ASA}
 
 % redefine beamer colors
 
-\logo{\includegraphics[height=0.6cm]{abt_logo}}
+\logo{\includegraphics[height=0.6cm]{NORCLogo_Short_Color}}
 
 \begin{frame}
     \titlepage
